# news_chatbot

news_chatbot/: .env.sample  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  webrtc_nat.md
news_chatbot/chat_backend/: .env.sample  Dockerfile  Dockerfile.dev  app.py  pyproject.toml
news_chatbot/chat_backend/api/: routes.py
news_chatbot/chat_backend/business_agents/agents/: agent_definitions.py  news_agent.py
news_chatbot/chat_backend/business_agents/tools/: news_tools.py
news_chatbot/chat_backend/utils/: settings.py
news_chatbot/voice_backend/: .env.sample  Dockerfile  Dockerfile.dev  app.py  pyproject.toml
news_chatbot/voice_backend/bots/: news_bot.py
news_chatbot/voice_backend/clients/: chat_client.py
news_chatbot/voice_backend/services/: news_llm.py  tts_factory.py
news_chatbot/voice_backend/utils/: settings.py
news_chatbot/web_client/: .env.sample  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
news_chatbot/web_client/src/: App.tsx  config.ts  vite-env.d.ts
